Modified userpost page

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -6,7 +6,15 @@
 <br>
 <h3><p>This web blog is build via Ruby on Rails</p> <br>
 <p>
-  Student Name: Yunqing Peng Student ID: U1666660 Framework Name: Ruby on Rails
+Student Name: Yunqing Peng
+</p>
+<br>
+<p>
+  Student ID: U1666660
+</p>
+<br>
+<p>
+  Framework Name: Ruby on Rails
 </p>
 </h3>
 
