--- a/app/views/userpartial/_nav.html.erb
+++ b/app/views/userpartial/_nav.html.erb
@@ -8,35 +8,22 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to Setting.site_name, admin_posts_path, class: 'navbar-brand'%>
 
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-
-        
         <li>
-          <%= link_to admin_posts_path do %>
+          <%= link_to userposts_path do %>
           POSTS <span class="sr-only"></span>
           <% end %>
         </li>
 
-        <li><%= link_to 'MODERATORS', admin_moderators_path %></li>
-        <li><%= link_to 'TAGS', new_admin_tag_path %></li>
-        <li><%= link_to 'COMMENTS', admin_comments_path %></li>
-        <li><%= link_to 'VISITORS', admin_visitors_path %></li>
-        <li><%= link_to 'MESSAGES', admin_messages_path %></li>
-        <li><%= link_to 'NOTIFICATIONS', admin_notifications_path %></li>
-        <li><%= link_to 'DASHBOARD', admin_dashboard_index_path %></li>
-        <li><%= link_to 'SETTINGS', new_admin_setting_path %></li>
-
-
 
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to 'LOG OUT', logout_path %></li>
+        <li><%= link_to 'LOG OUT', login_url %></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
