--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -1,7 +1,6 @@
 
 <div class="container">
 
-
 <h1>User Login</h1>
 <br><br>
 <%= image_tag @user['picture']['data']['url'].to_s %>
@@ -13,6 +12,12 @@
 <button type="button" class="btn btn-default btn-lg">
   <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
   <%= link_to "Create New Post", new_userpost_path %>
+</button>
+
+
+<button type="button" class="btn btn-default btn-lg">
+  <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
+  <%= link_to "View All Posts", userposts_path %>
 </button>
 
 
