--- a/app/views/userposts/_postform.html.erb
+++ b/app/views/userposts/_postform.html.erb
@@ -14,13 +14,12 @@
 
 
    <div class="col-sm-12  form-group">
-<p>
   <%= f.label :content, class: 'col-sm-2 control-label' %>
-   <div class="col-sm-12 form-group">
-    <%= f.text_field :content, class: 'form-control'%>
-</p>
-</div>
-</div>
+  <div class="field">
+  <%= f.trix_editor  :content %>
+  </div>
+
+  </div>
 
 
 
