Format WYSIWYG output

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,5 @@
 <div class="container">
 
-
 <h1>Posts Index</h1>
 <br>
 <%= link_to 'All Posts', posts_path, class:'btn btn-default' %>
@@ -13,11 +12,9 @@
           <span class="glyphicon glyphicon-time"></span>  <%= time_ago post.created_at %>
       </p>
 
-      <p>
-          <%= truncate(post.content, length: 104, separate: '' ) { link_to 'Read More', post_path(post) }%>
-
-      </p>
-
+        <p>
+           <%=  truncate(strip_tags(post.content), length: 104, separate: '' ) { link_to 'Read More', post_path(post) }   %> 
+        </p>
 
 <% if Setting.tag_visible? %>
       <p>
@@ -28,6 +25,7 @@
 <% end %>
       <hr>
 <% end %>
+
 
 <div class="text-center">
 <p><%= will_paginate @posts %></p>
