--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -3,7 +3,7 @@
 
 <h1>Dashboard</h1>
 
-<h2>Post</h2>
+<h2>Posts</h2>
 
 <button class="btn btn-default btn-sm"><%= link_to new_admin_post_path, style: "color: #008b45" do %><h5>Create New Post</h5></button>
 <% end %>
@@ -50,7 +50,7 @@
 <% end %>
 
 
-<h2>Visitor</h2>
+<h2>Visitors</h2>
 <table class="table table-bordered table-hover">
     <thead>
       <tr>
